# sage

./: .gitignore  .gitmodules  CMakeLists.txt
logger/: CMakeLists.txt
logger/include/: logger.h  loggerproxy.h
logger/src/: logger.cpp
tests/: 3d_engine.cpp  w3d_reader.cpp
tests/data/shaders/: fragment.glsl  vertex.glsl
